--- a/UI/layouts/flexbox.html
+++ b/UI/layouts/flexbox.html
@@ -43,8 +43,8 @@
 	</style>
 </head>
 <body>
-	<div class="container">
-		<div class="row">
+	<div class="flex-container">
+	
 			<div class="flex-item">
 				<img alt="" class="img img-responsive" data-idx="0" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6515.JPG">
 			</div>
@@ -76,11 +76,6 @@
 			<div class="flex-item">
 				<img alt="" class="img img-responsive" data-idx="7" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6583.JPG">
 			</div>
-		</div>
 	</div>
-
-	<script>
-		
-	</script>
 </body>
 </html>
