--- a/UI/layouts/inline-column.html
+++ b/UI/layouts/inline-column.html
@@ -16,58 +16,61 @@
 			display: inline-block;
 		}
 
+		img {
+			max-width: 280px;
+		}
+
 		.box {
 			margin-bottom: 6px;
 			width: 100%; 
 		}
+		
 
-		.box1 {
-			height: 200px;
-			width: 350px;
-			background-color: green;
-		}
-		
-		.box2 {
-			height: 300px;
-			width: 350px;
-			background-color: red;
-		}
-		
-		.box3 {
-			height: 400px;
-			width: 280px;
-			background-color: blue;
-		}
 	</style>
 </head>
 <body>
 	<div class="container">
 		<div class="column">
-			<div class="box box1"></div>
-			<div class="box box2"></div>
-			<div class="box box3"></div>
-			<div class="box box3"></div>
+			<img alt="" class="img img-responsive" data-idx="0" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6515.JPG">		
+			<img alt="" class="img img-responsive" data-idx="1" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6534.JPG">
+			<img alt="" class="img img-responsive" data-idx="2" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6536.JPG">	
+			<img alt="" class="img img-responsive" data-idx="3" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6560.JPG">		
+			<img alt="" class="img img-responsive" data-idx="4" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6563.JPG">			
+			<img alt="" class="img img-responsive" data-idx="5" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6574.JPG">		
+			<img alt="" class="img img-responsive" data-idx="6" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6580.JPG">	
+			<img alt="" class="img img-responsive" data-idx="7" src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6583.JPG">			
 		</div>
-
 		<div class="column">
-			<div class="box box1"></div>
-			<div class="box box2"></div>
-			<div class="box box3"></div>
-			<div class="box box3"></div>
-			<div class="box box3"></div>
-			<div class="box box1"></div>
-			<div class="box box1"></div>
+			<img alt="" class="img img-responsive" data-idx="0" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0365.JPG">
+			<img alt="" class="img img-responsive" data-idx="1" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0368.JPG">
+			<img alt="" class="img img-responsive" data-idx="2" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0376.JPG">
+			<img alt="" class="img img-responsive" data-idx="3" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0376_v.JPG">
+			<img alt="" class="img img-responsive" data-idx="4" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0382.JPG">
+			<img alt="" class="img img-responsive" data-idx="5" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0390.JPG">
+			<img alt="" class="img img-responsive" data-idx="6" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0393.JPG">
+			<img alt="" class="img img-responsive" data-idx="7" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0394.JPG">
+			<img alt="" class="img img-responsive" data-idx="8" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0405.JPG">
+			<img alt="" class="img img-responsive" data-idx="9" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0407.JPG">
+			<img alt="" class="img img-responsive" data-idx="10" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0415.JPG">
+			<img alt="" class="img img-responsive" data-idx="11" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0417.JPG">
+			<img alt="" class="img img-responsive" data-idx="12" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0423.JPG">
+			<img alt="" class="img img-responsive" data-idx="13" src="https://nadam.blob.core.windows.net/wedding/engagement_1/thumbnails/IMG_0429.JPG">
 		</div>
-
 		<div class="column">
-			<div class="box box3"></div>
-			<div class="box box1"></div>
-			<div class="box box1"></div>
-			<div class="box box2"></div>
-			<div class="box box2"></div>
-			<div class="box box3"></div>
-			<div class="box box2"></div>
-			<div class="box box1"></div>
+			<img alt="" class="img img-responsive" data-idx="3" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6905.JPG">
+			<img alt="" class="img img-responsive" data-idx="4" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6909.JPG">
+			<img alt="" class="img img-responsive" data-idx="5" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6912.JPG">
+			<img alt="" class="img img-responsive" data-idx="6" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6913.JPG">
+			<img alt="" class="img img-responsive" data-idx="7" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6918.JPG">
+			<img alt="" class="img img-responsive" data-idx="8" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6920.JPG">
+			<img alt="" class="img img-responsive" data-idx="9" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6923.JPG">
+			<img alt="" class="img img-responsive" data-idx="10" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6927.JPG">
+			<img alt="" class="img img-responsive" data-idx="11" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6935.JPG">
+			<img alt="" class="img img-responsive" data-idx="12" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6938.JPG">
+			<img alt="" class="img img-responsive" data-idx="13" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6944.JPG">
+			<img alt="" class="img img-responsive" data-idx="14" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6946.JPG">
+			<img alt="" class="img img-responsive" data-idx="15" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6963.JPG">
+			<img alt="" class="img img-responsive" data-idx="16" src="https://nadam.blob.core.windows.net/wedding/church_ceremony/thumbnails/IMG_6967.JPG">
 		</div>
 	</div>
 </body>
