--- a/UI/layouts/modals/grid-modal.html
+++ b/UI/layouts/modals/grid-modal.html
@@ -1,53 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="../../lib/jquery/jquery-v3.4.0.js"></script>
+	
+	<link rel="stylesheet" href="../../lib/bootstrap/bootstrap.min.css">
 	<style>
 		.ndm-modal {
-			overflow: scroll;
-			position: fixed;
-			display: grid;
-			grid-template-columns: 100%;
-			grid-template-rows: 100%;
+			overflow-y: scroll;
+			overflow-x: hidden;
+			position: absolute;
+			top: 0;
+			left: 0em;
+    		height: 100vh;
+			max-height: 100vh;
 
-			width: 100%;
-    		height: 100%;
-
-			opacity: 0;
 			transition: all .4s;
 		}
 
-		.ndm-modal-content {
-			place-self: center;
-			padding: 2px;
-			border: 3px solid lightgray;
-			display: block;
+		.ndm-modal.card {
+			height: 100% !important;	
 		}
 
-		img {
+		.ndm-modal-content img {
+			max-width: 100vh;
+			max-height: 100vh;
 		}
 	</style>
 </head>
 <body>
 
 	<button id="modal-thumbnail-opener">Show modal</button>
-	<div id="modal-thumbnail" class="ndm-modal">
-		<div class="ndm-modal-content">
-			<h1>Hello center</h1>
-			<img src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6560.JPG">
+
+	<div id="modal-thumbnail" class="container-fluid ndm-modal">
+		<div class="card">
+			<div class="card-body d-flex flex-wrap justify-content-around align-items-center">
+				<img src="https://nadam.blob.core.windows.net/wedding/preparation/thumbnails/IMG_6560.JPG">
+			</div>
 		</div>
 	</div>
-	
 
+<!-- 
 	<button id="modal-real-opener">Show modal</button>
 	<div id="modal-real" class="ndm-modal">
 		<div class="ndm-modal-content">
-			<h1>Hello center other image</h1>
 			<img src="https://nadam.blob.core.windows.net/wedding/preparation/viewimages/IMG_6560.JPG">
-			<h1>Hello center other image</h1>
 		</div>
-	</div>
+	</div> -->
 
+
+	<script src="../../lib/jquery/jquery-v3.4.0.js"></script>
+	<script src="../../lib/bootstrap/bootstrap.min.js"></script>   
 	<script>
 		$("#modal-thumbnail-opener").click(() => {
 
@@ -56,11 +57,23 @@
 			});
 		});
 
-		$("#modal-real-opener").click(() => {
-			$("#modal-real").css({
-				"opacity": "1"
+		$("#modal-thumbnail div button").click(() => {
+			$("#modal-thumbnail").css({
+				"opacity": "0"
 			});
 		});
+
+		// $("#modal-real-opener").click(() => {
+		// 	$("#modal-real").css({
+		// 		"opacity": "1"
+		// 	});
+		// });
+
+		// $("#modal-real-opener button").click(() => {
+		// 	$("#modal-real").css({
+		// 		"opacity": "0"
+		// 	});
+		// });
 
 	</script>
 </body>
