--- a/Projects/Katamino/src/app/app.component.html
+++ b/Projects/Katamino/src/app/app.component.html
@@ -13,9 +13,9 @@
 
 <hr>
 <h3>Mirror</h3>
-<div *ngFor="let matrix of mirrors" class="katamino-container">
+<!-- <div *ngFor="let matrix of mirrors" class="katamino-container">
   <app-matrix [matrix]="matrix"></app-matrix>
-</div> 
+</div>  -->
 <hr>
 
 <div *ngFor="let matrix of kataminos" class="katamino-container">
